CICD/GitLab CI/devops_jenkins/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins
  namespace: devops
spec:
  parentRefs:
    # 跨命名空间引用 istio-system 里的 Gateway（其公网入口为 152.32.130.53）
    - name: istio-gateway
      namespace: istio-system
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - jenkins.devops.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jenkins-service
          port: 8080
